# opengl-2d-tests

./: .gitignore  README.org
first-example/: CMakeLists.txt
simple-game/: CHANGELOG.org  CMakeLists.txt  README.org  TODO.org  enemy.cpp  enemy.h  game.cpp  gameScore.cpp  gameScore.h  gameTools.cpp  gameTools.h  screens.cpp  screens.h  seriefactory.cpp  seriefactory.h  sprites.cpp  sprites.h  transImpl.h  transInterface.h
simple-game/diagrams/: New-enemy-moves.drawio  enemy-move-1-circle.drawio
